增加后台自动更新天气的功能

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -26,6 +26,8 @@
         </activity>
         <activity android:name="com.example.heqi.activity.WeatherActivity" >
         </activity>
+        <service android:name="com.example.heqi.service.AutoUpdateService"></service>
+        <receiver android:name="com.example.heqi.receiver.AutoUpdateReceiver"></receiver>
     </application>
 
 </manifest>
